@startuml

package main {
    
    package src {
       

        package dados {
            interface IOpeacaoDados {
                void {abstract} salvar_dados(dados: Tuple)
                void {abstract} atualizar_dados(dados: Tuple)
            }
            class Arquivo<T> {
                # String caminho_base
                # String caminho_arquivo
                {abstract} +salvar_dados(dados: Tuple)
                {abstract} +atualizar_dados(dados: Tuple)
                +verificar_arquivo(): bool
            }
            class ArquivoExcel {
                - WorkBook planilha
                ~ String nome_aba 
                ~ criar_cabecalho(dados: List[Dict[str, Union[str, int]]], aba: worksheet) : List[str]
                + salvar_dados(dados: List[Dict[str, Union[str, int]]]) : void
                + atualizar_dados(dados: List[Dict[str, Union[str, int]]]) : void
            }
            IOpeacaoDados <|.. Arquivo 
            Arquivo <|-- ArquivoExcel

        }

        package service {
            class WebScrapingSelenium {
                - url: str
                - servico: Service
                + abrir_navegador() : WebDriver
                + extrair_dados(navegador: WebDriver) : Iterator<Tuple[WebElement]>
                + executar_paginacao(navegador: WebDriver) : bool
                + fechar_navegador(navegador: WebDriver)
                - clicar_cookie(navegador: WebDriver)
            }

        
        }
        


    }
    class WebScrapingPipeline {
            ~ tipo_imovel
            ~ url
            + rodar_web_scraping()
        }
      
        WebScrapingPipeline "1" <-- "usa" "WebScrapingSelenium" : servico_web_scraping 
        WebScrapingPipeline "1" <-- "usa" "IOpeacaoDados" : operacao_dados
}

@enduml
